--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
+
+    <div id='workout-container'>
+        
+    </div>
     
 </body>
 </html>
