--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
     </div>
   </section>
 
+  <div id="update-workout">
+    
+  </div>
+
   <div class="album py-5 bg-light">
     <div class="container" id="workout-container">
 
